--- a/flutter-app/android/app/src/main/AndroidManifest.xml
+++ b/flutter-app/android/app/src/main/AndroidManifest.xml
@@ -5,8 +5,9 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+    <uses-permission android:name="android.permission.INTERNET" />    
+    
     <application
-        android:name="io.flutter.app.FlutterApplication"
         android:label="flutter_login_signup"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -24,7 +25,12 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
+            android:name="LoraPetTrackerAndroid"
+            android:value="2" />
+        <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyAB2FHSs1YdclQr5tdOXEAxvFaZ4NLPuJ0"/>
     </application>
 </manifest>
