--- a/flutter-app/pubspec.yaml
+++ b/flutter-app/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_fonts: ^0.3.5
+  google_maps_flutter: ^2.0.6
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
